--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Location-based AR.js with three.js</title>
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+      }
+
+      #canvas1 {
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+    </style>
   </head>
+
   <body>
     <div id="root"></div>
+    <video id="video1" autoplay playsinline style="display: none"></video>
+    <canvas id="canvas1"></canvas>
+    <script src="%PUBLIC_URL%/vendor/three.js/build/three.js"></script>
+    <script src="%PUBLIC_URL%/build/ar-threex-location-only.js"></script>
+    <script src="%PUBLIC_URL%/index.js"></script>
   </body>
 </html>
