Update av frontend, denne funker good

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Location-based AR.js with three.js</title>
+    <title>Augumented Reality</title>
   </head>
   <body>
     <div id="root"></div>
